<?xml version="1.0" encoding="utf-8"?>
<!-- 
*************************************
 * Programmer: David Charles
 * Class ID: dchar5146
 * Lab 03
 * CIS 4700
 * Spring 2014
 * Due date: 3/27/14
 * Date completed: 3/25/14
 *************************************
 Package Tracker app
 Features:
 TAB 1-Lets you add a package:
	-You can add a package entering a tracking number and a name for the package. Also a carrier is needed, by default is UPS but this can be changed in the settings
 TAB 2-Displays added packages: 
  Displays current added packages labeling them with their tracking number and name.
  Pressing a package will show a dialog with a couple of options:
  	   -Show Complete information: Displays more information about the package such as (Location, carrier, status, estimated delivery and Owner (by default a package has no Owner)
       -Remove this package: Removes currently selected package 
       -Add to calendar: Add an estimated delivery date to the calendar
       -Set an owner using contacts book: You can pick someone from your contacts book and set it as owner of this package
       -Cancel 
-Options button: When pressed it will show a preference activity. In this preference activity you can make some changes such as:
	  -Change your profile: Here you can store information about yourself and it will be stored as long as the app is installed
	  -Carrier: You can change the default carrier which is UPS
      -Background Color: You can change the background color
      -Clear packages list: Will clear the packages list
      -Turn on Bluetooth: Turns on the Bluetooth
      
*The app will load the packages from the database everytime it starts up 
*everytime a package is added, removed or edited it will be refelected in the database
*and will save the preferences set on the preference activity 

Tested on and Galaxy S4

Added strings needed 
**************************************************************************
-->

<resources>

    <string name="app_name">Lab03.dcharl5146</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string-array name="carrier_arrays">
        <item>UPS</item>
        <item>Fedex</item>
        <item>USPS</item>
        <item>DHL</item>
        <item>Lasership</item>
    </string-array>

    <string name="trackingtv1">---</string>
    <string name="estimatedtv1">---</string>
    <string name="carriertv1">---</string>
    <string name="statustv1">---</string>
    <string name="packageinfotv">Package Information</string>
    <string name="locationtv1">---</string>
    <string name="packageName">Name</string>
    <string name="packageTracking">Tracking #</string>
    <string name="trackPackage">Track Package</string>
    <string name="trackPackageTitle">Track a package</string>
    <string name="nametv">---</string>
    <string name="ownertv">---</string>
    <string name="bshow">Show complete information</string>
    <string name="bdelete">Remove this package</string>
    <string name="bcontacts">Set an owner using contacts book</string>
    <string name="bestimated">Add to calendar</string>
    <string name="bcancel">Cancel</string>
    <string name="chooseContact">"Choose this contact"</string>
    <string name="carrierTv">"Select a carrier"</string>
    <string name="carrierEd">""</string>
    <string name="menu">"Menu"</string>
    <string name="profilenametv">"Name"</string>
    <string name="profilecitytv">"City"</string>
    <string name="profilestatetv">"State"</string>
    <string name="profilezipcodetv">"Zip code"</string>
    <string name="profiletitletv">"Your profile"</string>
    <string name="profilenameed">"Enter your name"</string>
    <string name="profilecityed">"Enter your city"</string>
    <string name="profilestateed">"Enter your state"</string>
    <string name="profilezipcodeed">"Enter your zip code"</string>
    <string name="profilebutton">"Save profile"</string>
    <string name="contact"></string>
    <string name="trackpackagehint">"Enter tracking number"</string>
    <string name="namehint">"Enter a name for the package"</string>
    <string name="editContact">"Edit this contact"</string>

</resources>